added tests and classes for new report service Signed-off-by: jason.smallman <jason.smallman@digital.justice.gov.uk>